# gr-gnss-gnuradio-3.10

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
.conda/: README.md
apps/: CMakeLists.txt
docs/: CMakeLists.txt  README.gnss
examples/: 2022-05-06_193031_positions.geojson  2022-06-17_161056_positions.geojson  2022-08-13_151446_positions.geojson  2022-09-28_055635_positions.geojson  2022-10-02_155256_positions.geojson  2022-11-28_204322_positions.geojson  subframes.raw  subframes.txt
grc/: CMakeLists.txt  gnss_acquisition_and_tracking.block.yml  gnss_ca_code_generator.block.yml  gnss_ca_symbols_to_nav_bits.block.yml  gnss_doppler_shift.block.yml  gnss_geojson_file_sink.block.yml  gnss_gnss_channel.block.yml  gnss_nav_message_decoder.block.yml  gnss_number_file_sink.block.yml  gnss_pseudoranges_decoder.block.yml  gnss_pvt.block.yml  gnss_pvt_satellite.block.yml  gnss_pvt_user.block.yml  gnss_resampler.block.yml  gnss_rft.block.yml  gnss_signal_normalizer.block.yml  gnss_skip_zeros.block.yml  gnss_type_converter.block.yml
lib/: CMakeLists.txt  acquisition_and_tracking_impl.cc  acquisition_and_tracking_impl.h  ca_code.h  ca_code_generator_impl.cc  ca_code_generator_impl.h  ca_code_phase_assigments.h  ca_symbols_to_nav_bits_impl.cc  (+58 more)
lib/utils/: CMakeLists.txt  dimensions.hpp  flatbuffer.hpp  ilog2.hpp  power_of_two.hpp  span.hpp  tensor.hpp  tensor0.hpp
python/gnss/bindings/: CMakeLists.txt  acquisition_and_tracking_python.cc  ca_code_domain_python.cc  ca_code_generator_python.cc  ca_symbols_to_nav_bits_python.cc  doppler_shift_python.cc  geojson_file_sink_python.cc  gnss_channel_python.cc  nav_message_decoder_python.cc  navigation_system_python.cc  number_file_sink_python.cc  pseudoranges_decoder_python.cc  pvt_python.cc  pvt_satellite_python.cc  pvt_user_python.cc  python_bindings.cc  resampler_python.cc  rft_python.cc  rft_type_python.cc  signal_normalizer_python.cc  skip_zeros_python.cc  type_converter_python.cc
python/gnss/bindings/docstrings/: acquisition_and_tracking_pydoc_template.h  ca_code_generator_pydoc_template.h  ca_symbols_to_nav_bits_pydoc_template.h  doppler_shift_pydoc_template.h  geojson_file_sink_pydoc_template.h  gnss_channel_pydoc_template.h  nav_message_decoder_pydoc_template.h  number_file_sink_pydoc_template.h  pseudoranges_decoder_pydoc_template.h  pvt_pydoc_template.h  pvt_satellite_pydoc_template.h  pvt_user_pydoc_template.h  resampler_pydoc_template.h  rft_pydoc_template.h  signal_normalizer_pydoc_template.h  skip_zeros_pydoc_template.h  type_converter_pydoc_template.h
(+61 files in other folders)
